* Add new mods from June 10 * Attractive slidetoggle for dialog windows

--- a/style.css
+++ b/style.css
@@ -824,6 +824,7 @@ h3 {
   overflow-x: hidden;
   max-height: 600px !important;
   max-width: 700px !important;
+  position: relative;
 }
 
 .ui-dialog-content-hidden {
