made press twice to exit an option (see #356)

--- a/mobile/res/xml/preferences.xml
+++ b/mobile/res/xml/preferences.xml
@@ -50,6 +50,11 @@
 	        android:title="@string/pref_force_https"
 	        android:summary="@string/pref_force_https_sum"
 	        android:defaultValue="true" />
+        <CheckBoxPreference
+                android:key="pref_press_twice_to_exit"
+                android:title="@string/pref_press_twice_to_exit"
+                android:summary="@string/pref_press_twice_to_exit_sum"
+                android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
