--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -10,6 +10,12 @@ body {
   border: 0;
 }
 
+#updatestatus .loadlevel {
+  border-width: 0;
+  background: transparent;
+  color: #FFF;
+}
+
 #innerstatus {
   float: right;
   max-width: 50%;
