show selected portal's color in mobile status bar

--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -32,6 +32,11 @@ body {
   overflow: hidden;
 }
 
+#mobileinfo .portallevel {
+  padding: 0 0.2em;
+  color: #FFF;
+}
+
 #sidebar, #chatcontrols, #chat, #chatinput {
   background: #0B3351 !important;
 }
