--- a/style.css
+++ b/style.css
@@ -717,19 +717,19 @@ h3 {
   box-sizing: border-box;
 }
 
-#updatestatus .loadlevel {
+#updatestatus .map {
+  margin-left: 8px;
+}
+
+#loadlevel {
   background: #FFF;
   color: #000000;
   display: inline-block;
-  min-width: 1.5em;
+  min-width: 1.8em;
   border: 1px solid #20A8B1;
   border-width: 0 1px;
   margin: -4px 0;
   padding: 4px 0.2em;
-}
-
-#updatestatus .map {
-  margin-left: 8px;
 }
 
 /* Dialogs
