--- a/mobile/res/layout/activity_main.xml
+++ b/mobile/res/layout/activity_main.xml
@@ -6,6 +6,11 @@
     <com.cradle.iitc_mobile.IITC_WebView
         android:id="@+id/iitc_webview"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_height="fill_parent" />
+    <ImageView android:id="@+id/imageLoading"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:background="@android:color/darker_gray"
+        android:src="@drawable/iitc" />
 
 </LinearLayout>
