Always show "sign out" link in IITCm. (no hover on touch screen --> an accidental click would directly log you out)

--- a/mobile/smartphone.css
+++ b/mobile/smartphone.css
@@ -76,6 +76,10 @@ body {
   background-color: #00c5ff !important;
 }
 
+#name #signout { /* no hover, always show signout button */
+  display: block;
+}
+
 #sidebar, #chatcontrols, #chat, #chatinput {
   background: #0B3351 !important;
 }
