Feedback when geosearch finds nothing
Subtle, but it's driven me crazy in the past where seemingly reasonable
searches do nothing and "worked - but found nothing" and "maybe it's
just taking a second to work" aren't apparent.

--- a/style.css
+++ b/style.css
@@ -469,6 +469,12 @@ input {
   margin-bottom: 2px;
   cursor: pointer;
 }
+
+.search_not_found{
+  color:red;
+  font-style: italic;
+}
+
 ::-webkit-input-placeholder {
   font-style: italic;
 }
